--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JavaScript lab",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json",
+    "test": "mocha --exit --recursive --timeout 5000"
   },
   "author": "flatironschool",
   "license": "Included in Repo",
